--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   intl: ^0.18.1
   google_fonts: ^4.0.4
   carousel_slider: ^4.2.1
+  flutter_barcode_scanner: ^2.0.0
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
