--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.5
   http: ^0.13.6
   shared_preferences: ^2.1.1
+  image_picker: ^0.8.7+5
 
 dev_dependencies:
   flutter_test:
