--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_barcode_scanner: ^2.0.0
   http: ^0.13.6
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
