--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.1.1
   image_picker: ^0.8.7+5
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
